fix: redirect 과정 추가
기존에 회원가입시 body가 빈 채로 다시 원래 홈으로 돌아가지 못하는 문제가 있었음 responseBody를 추가하여 처리하도록 수정